<resources>
    <string name="app_name">InkLink</string>

    <!--  navigation drawer strings  -->
    <string name="nav_str_menu_home">Home</string>
    <string name="nav_str_menu_articles">Articles</string>
    <string name="nav_str_menu_users">Users</string>
    <string name="open_nav_str">Open Navigation Drawer</string>
    <string name="close_nav_str">Close Navigation Drawer</string>

    <!--  nav drawer header strings  -->
    <string name="header_str_username">Guest</string>
    <string name="header_str_email">guest@inklink.com</string>
    <string name="header_str_last_login_time">Last Logged in: %1$s</string>

    <!--  login activity strings  -->
    <string name="login_str">Login</string>
    <string name="login_heading_str">Welcome back to InkLink</string>
    <string name="email_hint_str">Email</string>
    <string name="password_hint_str">Password</string>

    <!--  register activity strings  -->
    <string name="register_str">Register</string>
    <string name="register_heading_str">Get Started with InkLink</string>
    <string name="register_first_name_hint_str">First Name</string>
    <string name="register_last_name_hint_str">Last Name</string>
    <string name="register_email_hint_str">Email</string>
    <string name="register_password_hint_str">Password</string>
    <string name="register_cPassword_hint_str">Confirm Password</string>

    <!--  test strings  -->
    <string name="test_username">Test</string>
    <string name="test_email">test@gmail.com</string>
    <string name="test_title">Article Title</string>
    <string name="test_description">Article Content</string>

    <!--  create article title  -->
    <string name="create_article_str">Create a new Article</string>

    <!--  create article option menu strings  -->
    <string name="opt_publish_str">Publish</string>
    <string name="opt_save_as_draft_str">Save as Draft</string>
    <string name="opt_discard_str">Discard Changes</string>

    <!--  Update profile fragment strings  -->
    <string name="update_str">Update Profile</string>
    <string name="update_firstName">First Name</string>
    <string name="update_lastName">Last Name</string>
    <string name="update_username">Username</string>
    <string name="update_email">Email</string>
    <string name="update_password">Password</string>
    <string name="update_about">About</string>

    <!--  view user string  -->
    <string name="view_user_str">View User</string>
    <string name="articles_by_user">7 Latest articles by This User</string>
</resources>