<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/nav_simple_tasks_group"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/nav_str_menu_home"
            android:icon="@drawable/ic_home" />
        <item android:id="@+id/nav_articles"
            android:title="@string/nav_str_menu_articles"
            android:icon="@drawable/ic_article" />
        <item android:id="@+id/nav_users"
            android:title="@string/nav_str_menu_users"
            android:icon="@drawable/ic_users" />
    </group>

    <group android:id="@+id/nav_user_group"
        android:checkableBehavior="single" />

</menu>