<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity"
    tools:ignore="AutoFill">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login_heading_str"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="@drawable/input_background"
        android:hint="@string/email_hint_str"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="12sp"
        app:layout_constraintStart_toStartOf="@id/login_email_editText"
        app:layout_constraintEnd_toEndOf="@id/login_email_editText"
        app:layout_constraintTop_toBottomOf="@id/login_email_editText"
        android:background="@drawable/input_background"
        android:hint="@string/password_hint_str"
        android:inputType="textPassword"
        android:textColor="#FFF"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/login_password_editText"
        app:layout_constraintEnd_toEndOf="@id/login_password_editText"
        app:layout_constraintTop_toBottomOf="@id/login_password_editText"
        android:background="@drawable/button_background"
        android:text="@string/login_str"
        android:textColor="#FFF"
        />

</androidx.constraintlayout.widget.ConstraintLayout>